--- a/.github/sync-fork.yml
+++ b/.github/sync-fork.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Merge Upstream `main` 
         run: |
-          git config user.email "github-action@users.noreply.github.com"
-          git config user.name "GitHub Actions"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
           git checkout main
           git merge upstream/main --no-commit
