--- a/.github/sync-fork.yml
+++ b/.github/sync-fork.yml
@@ -8,7 +8,7 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Forked Repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -19,13 +19,14 @@ jobs:
           git remote add upstream https://github.com/gradle/actions.git
           git fetch upstream
 
-      - name: Merge Upstream `main` 
+      - name: Set Git Config
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          
-          git checkout main
+
+      - name: Merge Upstream `main` 
+        run: |          
           git merge upstream/main --no-commit
           git reset -- ./.github
-          git commit -m "Merge in upstream/main"
+          git commit -m "Merge upstream:main"
           git push
